--- a/src/local_pathfinding/test/Untitled-1.ipynb
+++ b/src/local_pathfinding/test/Untitled-1.ipynb
@@ -12,9 +12,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "image/svg+xml": [
+       "<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" width=\"100.0\" height=\"100.0\" viewBox=\"-0.12 -0.12 3.24 3.24\" preserveAspectRatio=\"xMinYMin meet\"><g transform=\"matrix(1,0,0,-1,0,3.0)\"><g><path fill-rule=\"evenodd\" fill=\"#ff3333\" stroke=\"#555555\" stroke-width=\"0.06480000000000001\" opacity=\"0.6\" d=\"M 0.0,0.0 L 0.0,1.0 L 1.0,1.0 L 1.0,0.0 L 0.0,0.0 z\" /><path fill-rule=\"evenodd\" fill=\"#ff3333\" stroke=\"#555555\" stroke-width=\"0.06480000000000001\" opacity=\"0.6\" d=\"M 0.0,0.0 L 0.0,1.0 L 2.0,1.0 L 2.0,0.0 L 0.0,0.0 z\" /><path fill-rule=\"evenodd\" fill=\"#ff3333\" stroke=\"#555555\" stroke-width=\"0.06480000000000001\" opacity=\"0.6\" d=\"M 2.0,2.0 L 2.0,3.0 L 3.0,3.0 L 3.0,2.0 L 2.0,2.0 z\" /></g></g></svg>"
+      ],
+      "text/plain": [
+       "<MULTIPOLYGON (((0 0, 0 1, 1 1, 1 0, 0 0)), ((0 0, 0 1, 2 1, 2 0, 0 0)), ((2...>"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# land = MultiPolygon([Polygon([Point([0, 0]), Point([0, 1]), Point([1, 1]), Point([1, 0])])])\n",
     "\n",
@@ -24,42 +38,32 @@
     "        Polygon([Point([0, 0]), Point([0, 1]), Point([2, 1]), Point([2, 0])]),\n",
     "        Polygon([Point([2, 2]), Point([2, 3]), Point([3, 3]), Point([3, 2])]),\n",
     "    ]\n",
-    ")"
+    ")\n",
+    "\n",
+    "land"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "union_poly = union_all(land)\n",
-    "union_poly"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'non_overlapping_geoms = []\\nnon_overlapping_geoms.append(land.geoms[1].difference(land.geoms[0]))\\nnon_overlapping_geoms.append(land.geoms[0].difference(land.geoms[1]))\\nprint(len(non_overlapping_geoms))\\nnon_overlapping_land = MultiPolygon(non_overlapping_geoms)\\nlen(non_overlapping_land.geoms)'"
+       "shapely.geometry.multipolygon.MultiPolygon"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\"\"\"non_overlapping_geoms = []\n",
-    "non_overlapping_geoms.append(land.geoms[1].difference(land.geoms[0]))\n",
-    "non_overlapping_geoms.append(land.geoms[0].difference(land.geoms[1]))\n",
-    "print(len(non_overlapping_geoms))\n",
-    "non_overlapping_land = MultiPolygon(non_overlapping_geoms)\n",
-    "len(non_overlapping_land.geoms)\"\"\""
+    "union_poly = union_all(land)\n",
+    "union_poly\n",
+    "\n",
+    "type(union_poly)"
    ]
   },
   {
@@ -77,7 +81,6 @@
    ],
    "source": [
     "point = (0.5, 0.5)\n",
-    "# Point(point).within(land)\n",
     "\n",
     "for polygon in land.geoms:\n",
     "    if Point(point).within(polygon):\n",
@@ -89,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -98,13 +101,13 @@
        "True"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "land.contains(Point(*point))"
+    "union_poly.contains(Point(*point))"
    ]
   },
   {
@@ -127,6 +130,29 @@
     "from shapely import lib\n",
     "\n",
     "lib.contains(land, Point(*point))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "image/svg+xml": [
+       "<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" width=\"100.0\" height=\"100.0\" viewBox=\"-0.12 -0.12 3.24 3.24\" preserveAspectRatio=\"xMinYMin meet\"><g transform=\"matrix(1,0,0,-1,0,3.0)\"><g><path fill-rule=\"evenodd\" fill=\"#66cc99\" stroke=\"#555555\" stroke-width=\"0.06480000000000001\" opacity=\"0.6\" d=\"M 0.0,1.0 L 1.0,1.0 L 2.0,1.0 L 2.0,0.0 L 1.0,0.0 L 0.0,0.0 L 0.0,1.0 z\" /><path fill-rule=\"evenodd\" fill=\"#66cc99\" stroke=\"#555555\" stroke-width=\"0.06480000000000001\" opacity=\"0.6\" d=\"M 3.0,3.0 L 3.0,2.0 L 2.0,2.0 L 2.0,3.0 L 3.0,3.0 z\" /></g></g></svg>"
+      ],
+      "text/plain": [
+       "<MULTIPOLYGON (((0 1, 1 1, 2 1, 2 0, 1 0, 0 0, 0 1)), ((3 3, 3 2, 2 2, 2 3, ...>"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "union_poly"
    ]
   },
   {
