moved visual tests to notebook

--- a/src/local_pathfinding/land/test_land_polygons.ipynb
+++ b/src/local_pathfinding/land/test_land_polygons.ipynb
@@ -7,7 +7,6 @@
    "outputs": [],
    "source": [
     "import geopandas as gpd\n",
-    "from os.path import normpath\n",
     "\n",
     "COMPLETE_DATA_FILE = (\n",
     "    \"/workspaces/sailbot_workspace/src/local_pathfinding/land/shp/complete_land_data.shp\"\n",
@@ -640,7 +639,7 @@
     }
    ],
    "source": [
-    "from land_polygon_etl import load_pkl\n",
+    "from local_pathfinding.land_polygon_etl import load_pkl\n",
     "from local_pathfinding.obstacles import Land\n",
     "from custom_interfaces.msg import HelperLatLon\n",
     "from shapely.geometry import Point, box, MultiPolygon\n",
@@ -892,6 +891,142 @@
    ],
    "source": [
     "polygon_df[\"geometry\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'Point' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 97\u001b[0m\n\u001b[1;32m     94\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m boat1\u001b[38;5;241m.\u001b[39mcollision_zone \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m     95\u001b[0m     x, y \u001b[38;5;241m=\u001b[39m boat1\u001b[38;5;241m.\u001b[39mcollision_zone\u001b[38;5;241m.\u001b[39mexterior\u001b[38;5;241m.\u001b[39mcoords\u001b[38;5;241m.\u001b[39mxy\n\u001b[0;32m---> 97\u001b[0m mid_1 \u001b[38;5;241m=\u001b[39m \u001b[43mPoint\u001b[49m((x[\u001b[38;5;241m1\u001b[39m] \u001b[38;5;241m+\u001b[39m x[\u001b[38;5;241m2\u001b[39m]) \u001b[38;5;241m/\u001b[39m \u001b[38;5;241m2\u001b[39m, (y[\u001b[38;5;241m1\u001b[39m] \u001b[38;5;241m+\u001b[39m y[\u001b[38;5;241m2\u001b[39m]) \u001b[38;5;241m/\u001b[39m \u001b[38;5;241m2\u001b[39m)\n\u001b[1;32m     98\u001b[0m mid_2 \u001b[38;5;241m=\u001b[39m Point((x[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m+\u001b[39m x[\u001b[38;5;241m3\u001b[39m]) \u001b[38;5;241m/\u001b[39m \u001b[38;5;241m2\u001b[39m, (y[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m+\u001b[39m y[\u001b[38;5;241m3\u001b[39m]) \u001b[38;5;241m/\u001b[39m \u001b[38;5;241m2\u001b[39m)\n\u001b[1;32m    100\u001b[0m length \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mround\u001b[39m(mid_1\u001b[38;5;241m.\u001b[39mdistance(mid_2), \u001b[38;5;241m4\u001b[39m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'Point' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "import plotly.graph_objects as go\n",
+    "from numpy import ndarray\n",
+    "from custom_interfaces.msg import (\n",
+    "    HelperAISShip,\n",
+    "    HelperDimension,\n",
+    "    HelperHeading,\n",
+    "    HelperLatLon,\n",
+    "    HelperROT,\n",
+    "    HelperSpeed,\n",
+    ")\n",
+    "from local_pathfinding.coord_systems import XY, latlon_to_xy, meters_to_km\n",
+    "from local_pathfinding.obstacles import BOAT_BUFFER, Boat, Land, Obstacle\n",
+    "import numpy as np\n",
+    "from shapely.geometry import Point\n",
+    "\n",
+    "# Sample AIS SHIP message\n",
+    "ais_ship = HelperAISShip(\n",
+    "    id=1,\n",
+    "    lat_lon=HelperLatLon(latitude=51.97917631092298, longitude=-137.1106454702385),\n",
+    "    cog=HelperHeading(heading=0.0),\n",
+    "    sog=HelperSpeed(speed=18.52),\n",
+    "    width=HelperDimension(dimension=20.0),\n",
+    "    length=HelperDimension(dimension=100.0),\n",
+    "    rot=HelperROT(rot=0),\n",
+    ")\n",
+    "\n",
+    "# Create a boat object\n",
+    "boat1 = Boat(\n",
+    "    HelperLatLon(latitude=52.268119490007756, longitude=-136.9133983613776),\n",
+    "    HelperLatLon(latitude=51.95785651405779, longitude=-136.26282894969611),\n",
+    "    30.0,\n",
+    "    ais_ship,\n",
+    ")\n",
+    "\n",
+    "# Choose some states for visual inspection\n",
+    "valid_state = HelperLatLon(latitude=50.42973337261916, longitude=-134.12018940923838)\n",
+    "invalid_state = HelperLatLon(latitude=52.174842845359755, longitude=-137.10372451905042)\n",
+    "\n",
+    "# Extract coordinates for sailbot\n",
+    "sailbot_x, sailbot_y = boat1.sailbot_position\n",
+    "sailbot = go.Scatter(x=[sailbot_x], y=[sailbot_y], mode=\"markers\", name=\"Sailbot Position\")\n",
+    "\n",
+    "fig1 = go.Figure(sailbot)\n",
+    "\n",
+    "# Extract coordinates for valid and invalid states\n",
+    "valid_state_x, valid_state_y = latlon_to_xy(boat1.reference, valid_state)\n",
+    "valid_state = go.Scatter(x=[valid_state_x], y=[valid_state_y], mode=\"markers\", name=\"Valid State\")\n",
+    "\n",
+    "fig1.add_trace(valid_state)\n",
+    "\n",
+    "invalid_state_x, invalid_state_y = latlon_to_xy(boat1.reference, invalid_state)\n",
+    "invalid_state = go.Scatter(\n",
+    "    x=[invalid_state_x], y=[invalid_state_y], mode=\"markers\", name=\"Invalid State\"\n",
+    ")\n",
+    "\n",
+    "fig1.add_trace(invalid_state)\n",
+    "\n",
+    "# Extract exterior coordinates for boat1's collision cone\n",
+    "if boat1.collision_zone is not None:\n",
+    "    boat_x, boat_y = np.array(boat1.collision_zone.exterior.coords.xy)\n",
+    "    boat_x = np.array(boat_x)\n",
+    "    boat_y = np.array(boat_y)\n",
+    "    boat = go.Scatter(x=boat_x, y=boat_y, fill=\"toself\", name=\"Boat Collision Cone\")\n",
+    "    fig1.add_trace(boat)\n",
+    "\n",
+    "# Manually calculate the length of the collision zone based on:\n",
+    "# - the boat's projected distance\n",
+    "# - the boat's length\n",
+    "# - the safety buffer\n",
+    "collision_zone_length = round(\n",
+    "    (\n",
+    "        boat1._calculate_projected_distance()\n",
+    "        + 2 * BOAT_BUFFER\n",
+    "        + meters_to_km(boat1.ais_ship.length.dimension)\n",
+    "    ),\n",
+    "    4,\n",
+    ")\n",
+    "\n",
+    "fig1.add_annotation(\n",
+    "    text=\"Calculated Length of Collision Zone : \" + str(collision_zone_length) + \" km\",\n",
+    "    align=\"center\",\n",
+    "    showarrow=False,\n",
+    "    xref=\"paper\",\n",
+    "    yref=\"paper\",\n",
+    "    x=1,\n",
+    "    y=1,\n",
+    "    bordercolor=\"black\",\n",
+    "    borderwidth=1,\n",
+    ")\n",
+    "\n",
+    "# Measure the length of the collision zone based on the points of the polygon\n",
+    "x: ndarray\n",
+    "y: ndarray\n",
+    "\n",
+    "if boat1.collision_zone is not None:\n",
+    "    x, y = boat1.collision_zone.exterior.coords.xy\n",
+    "\n",
+    "mid_1 = Point((x[1] + x[2]) / 2, (y[1] + y[2]) / 2)\n",
+    "mid_2 = Point((x[0] + x[3]) / 2, (y[0] + y[3]) / 2)\n",
+    "\n",
+    "length = round(mid_1.distance(mid_2), 4)\n",
+    "\n",
+    "fig1.add_annotation(\n",
+    "    text=\"Measured Length of Collision Zone : \" + str(length) + \" km\",\n",
+    "    align=\"center\",\n",
+    "    showarrow=False,\n",
+    "    xref=\"paper\",\n",
+    "    yref=\"paper\",\n",
+    "    x=0.7,\n",
+    "    y=1,\n",
+    "    bordercolor=\"black\",\n",
+    "    borderwidth=1,\n",
+    ")\n",
+    "\n",
+    "fig1.update_layout(yaxis_range=[-200, 200], xaxis_range=[-200, 750])\n",
+    "fig1.show()"
    ]
   },
   {
