updated script to apply consistent 12.5NM buffer

--- a/src/local_pathfinding/land/test_land_polygons.ipynb
+++ b/src/local_pathfinding/land/test_land_polygons.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,12 +26,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# uncomment this to see entire land data set. It is slow but not too bad\n",
-    "# gdf.explore()"
+    "gdf.explore()"
    ]
   },
   {
