add additional instructions

--- a/bags/exlpore_data.ipynb
+++ b/bags/exlpore_data.ipynb
@@ -5,6 +5,11 @@
    "id": "ad6660e5",
    "metadata": {},
    "source": [
+    "This is a full description of every available field in the LPathData /local_path topic message.\n",
+    "\n",
+    "collect a rosbag using `ros2 bag record -o bag_file_name --topics /local_path`\n",
+    "\n",
+    "\n",
     "```\n",
     "Path global_path: \n",
     "    HelperLatLon[] waypoints: HelperLatLon: \n",
@@ -66,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "id": "e25f839a",
    "metadata": {},
    "outputs": [],
@@ -89,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "dddd75a2",
    "metadata": {},
    "outputs": [
@@ -97,7 +102,19 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[INFO] [1768722423.832805534] [rosbag2_storage:228]: Opened database 'rosbag2_2026_01_17-23_44_31/rosbag2_2026_01_17-23_44_31_0.db3' for READ_ONLY.\n"
+      "[ERROR] [1769908591.023398941] [rosbag2_storage:134]: Could not open 'rosbag2_2026_01_17-23_44_31/rosbag2_2026_01_17-23_44_31_0.db3' with 'sqlite3'. Error: Failed to read from bag: File 'rosbag2_2026_01_17-23_44_31/rosbag2_2026_01_17-23_44_31_0.db3' does not exist!\n",
+      "[ERROR] [1769908591.023424909] [rosbag2_storage:198]: Could not load/open plugin with storage id 'sqlite3'\n"
+     ]
+    },
+    {
+     "ename": "RuntimeError",
+     "evalue": "No storage could be initialized from the inputs.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[5], line 12\u001b[0m\n\u001b[1;32m      7\u001b[0m storage_options \u001b[38;5;241m=\u001b[39m rosbag2_py\u001b[38;5;241m.\u001b[39mStorageOptions(uri\u001b[38;5;241m=\u001b[39mbag_path, storage_id\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124msqlite3\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m      8\u001b[0m converter_options \u001b[38;5;241m=\u001b[39m rosbag2_py\u001b[38;5;241m.\u001b[39mConverterOptions(\n\u001b[1;32m      9\u001b[0m     input_serialization_format\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcdr\u001b[39m\u001b[38;5;124m\"\u001b[39m, output_serialization_format\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcdr\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m     10\u001b[0m )\n\u001b[0;32m---> 12\u001b[0m \u001b[43mreader\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mopen\u001b[49m\u001b[43m(\u001b[49m\u001b[43mstorage_options\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mconverter_options\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     13\u001b[0m msg_class \u001b[38;5;241m=\u001b[39m get_message(msg_type)\n\u001b[1;32m     15\u001b[0m rows \u001b[38;5;241m=\u001b[39m []\n",
+      "\u001b[0;31mRuntimeError\u001b[0m: No storage could be initialized from the inputs."
      ]
     }
    ],
